--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "seed": "node ./data/index.js"
   },
   "dependencies": {
     "bcrypt": "^3.0.0",
     "body-parser": "~1.17.1",
+    "connect-mongo": "^2.0.1",
     "debug": "~2.6.3",
     "dotenv": "^6.0.0",
     "eslint": "^5.1.0",
     "express": "~4.15.2",
+    "express-session": "^1.15.6",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.4",
     "morgan": "~1.8.1"
   },
