--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bcrypt": "^3.0.0",
     "body-parser": "~1.17.1",
     "connect-mongo": "^2.0.1",
+    "cors": "^2.8.4",
     "debug": "~2.6.3",
     "dotenv": "^6.0.0",
     "eslint": "^5.1.0",
