--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0"
+  },
+  "engines": {
+    "node": "9.3.0",
+    "npm": "5.6.0"
   }
 }
